# mercury-pubsub

./: .env  .gitignore  Cargo.toml  Dockerfile  README.md  build.rs  lerna.json  nixpacks.toml  package-lock.json  package.json  railway.toml  sqlx-data.json  turbo.json
.husky/: pre-commit
admin/: .eslintrc.cjs  .eslintrc.js  .prettierrc.js  README.md  package-lock.json  package.json  tsconfig.bin.json  tsconfig.json
admin/src/: bin.ts  index.ts
dashboard/: .env  .eslintrc.js  .gitignore  .prettierrc.js  README.md  jest.config.js  jest.setup.js  next.config.js  package-lock.json  package.json  prettier-plugins.js  tailwind.config.js  tsconfig.json
dashboard/.husky/: pre-commit
dashboard/public/: .gitignore  site.webmanifest
dashboard/scripts/: updateDependencies.mjs
dashboard/src/components/: ErrorBoundary.tsx  Spinner.tsx  ThemeMenu.tsx
dashboard/src/hooks/: auth.ts  channels.ts
dashboard/src/pages/: _app.tsx  _document.tsx  create-user.tsx  index.tsx  login.tsx
dashboard/src/types/: api.ts  environment.d.ts  json.ts
dashboard/tests/components/: ErrorBoundary.test.tsx  ThemeMenu.test.tsx
dashboard/tests/components/__snapshots__/: ErrorBoundary.test.tsx.snap  ThemeMenu.test.tsx.snap
docs/: .eslintrc.js  .gitignore  astro.config.ts  package.json  tailwind.config.cjs  tsconfig.json
docs/scripts/: updateDependencies.mjs
docs/src/components/: Title.astro
docs/src/layouts/: Layout.astro
docs/src/pages/: index.astro
examples/single-channel-chat/: package.json
examples/single-channel-chat/src/pages/: _app.tsx  index.tsx
examples/single-channel-chat/src/pages/api/: send.ts
examples/single-channel-chat/src/types/: environment.d.ts  mercury.d.ts
migrations/: 20220728064813_create_user_table.up.sql  20220728064837_create_session_table.up.sql  20220806185018_create_key_tables.down.sql
publisher/: README.md  package-lock.json  package.json  tsconfig.json
publisher/src/: index.ts
server/: Cargo.toml  Dockerfile  Dockerfile.railway  README.md  nixpacks.toml  railway.toml  sqlx-data.json
server/migrations/: 20220728064813_create_user_table.sql  20220728064837_create_session_table.sql  20220731165110_create_channel_table.down.sql  20220731165110_create_channel_table.sql  20220806185018_create_key_tables.sql  20220806185018_create_key_tables.up.sql
server/src/: config.rs  database.rs  health.rs  lib.rs  main.rs  senders.rs  sse.rs  state.rs
server/src/api/: auth.rs  channels.rs  keys.rs  mod.rs  users.rs
server/src/api/extract/: mod.rs  validated_json.rs
server/src/models/: access_token.rs  channel.rs  key.rs  mod.rs  refresh_token.rs  session.rs  user.rs
server/tests/: auth.rs
src/: config.rs  constants.rs  hello.rs  lib.rs  senders.rs  sse.rs
src/api/: auth.rs  channels.rs  error_handlers.rs  mod.rs
src/api/extract/: validated_json.rs
src/api/extractors/: mod.rs  refresh_token.rs  session_cookie.rs
src/models/: channel.rs  mod.rs  refresh_token.rs  session.rs  user.rs
subscriber/: .eslintrc.js  .prettierrc.js  README.md  package-lock.json  package.json  react.d.ts  tsconfig.json
subscriber/src/: index.ts  react.tsx
tests/: .eslintrc.js  .prettierrc.js  README.md  auth.rs  babel.config.js  package.json  tsconfig.json
tests/src/: admin.test.tsx  publisher.test.tsx  subscriber.test.tsx
types/: .prettierrc.js  README.md  package-lock.json  package.json
types/src/: index.ts
