[package]
name = "server"
version = "0.1.0"
edition = "2021"

[features]
secure = []

[profile.release]
lto = true
codegen-units = 1

[dependencies]
axum = { version = "0.5.13", features = ["headers", "http2"] }
chrono = { version = "0.4.19", features = ["serde"] }
dotenv = "0.15.0"
figment = { version = "0.10.6", features = ["env"] }
futures = "0.3.21"
hyper = "0.14.20"
jsonschema = "0.16.0"
serde = { version = "1.0.140", features = ["derive"] }
serde_json = "1.0.82"
sqlx = { version = "0.6.1", features = ["chrono", "json", "macros", "offline", "postgres", "runtime-tokio-rustls", "uuid"] }
thiserror = "1.0.31"
tokio = { version = "1.20.1", features = ["macros", "rt-multi-thread"] }
tokio-stream = { version = "0.1.9", features = ["sync"] }
tower = "0.4.13"
tower-http = { version = "0.3.4", features = ["fs", "trace"] }
tracing = "0.1.35"
tracing-subscriber = { version = "0.3.15", features = ["env-filter", "json"] }
uuid = { version = "1.1.2", features = ["serde"] }
validator = { version = "0.16.0", features = ["derive"] }

[dev-dependencies]
axum = { version = "0.5.13", features = ["macros"] }
