[package]
name = "server"
version = "0.1.2"
edition = "2021"

[profile.release]
strip = true
lto = true
codegen-units = 1

[dependencies]
anyhow = "1.0.66"
axum = { version = "0.6.0-rc.2", features = ["headers", "http2"] }
dotenvy = "0.15.6"
figment = { version = "0.10.8", features = ["env"] }
futures = "0.3.25"
hyper = "0.14.22"
jsonschema = "0.16.1"
serde = { version = "1.0.147", features = ["derive"] }
serde_json = "1.0.87"
sqlx = { version = "0.6.2", features = ["json", "macros", "offline", "postgres", "runtime-tokio-rustls", "uuid"] }
thiserror = "1.0.37"
tokio = { version = "1.21.2", features = ["macros", "rt-multi-thread"] }
tokio-stream = { version = "0.1.11", features = ["sync"] }
tower = "0.4.13"
tower-http = { version = "0.3.4", features = ["cors", "fs", "trace"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = ["env-filter", "json"] }
uuid = { version = "1.2.1", features = ["serde"] }
validator = { version = "0.16.0", features = ["derive"] }
once_cell = "1.16.0"

[dev-dependencies]
axum = { version = "0.6.0-rc.2", features = ["macros"] }
